Issue #2411533 by Zarabadoo: Toolbar small screen compatibility - Truncate long names in the toolbar - Set a max width to the dropdowns and make long names wrap.

--- a/css/acquia_lift.buttons.css
+++ b/css/acquia_lift.buttons.css
@@ -2,8 +2,7 @@
 input[type="submit"].acquia-lift-submit-button,
 .acquia-lift-cancel-button {
   -webkit-appearance: none;
-  -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0.2963em;
   max-width: 100%;
   overflow: visible;
@@ -63,4 +62,3 @@ input[type="submit"].acquia-lift-submit-button:active {
   background: #e3e3e3;
   text-shadow: 0 1px 0 #f6f6f6;
 }
-
