--- a/css/navbar/navbar-overlay-child.css
+++ b/css/navbar/navbar-overlay-child.css
@@ -15,8 +15,7 @@
 }
 
 #overlay {
-  -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  box-sizing: border-box;
   display: block;
   margin: 0 auto;
   max-width: 80em;
