--- a/css/navbar/navbar.module.css
+++ b/css/navbar/navbar.module.css
@@ -23,8 +23,7 @@
   background-repeat: no-repeat;
   border: none;
   box-shadow: none;
-  -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  box-sizing: border-box;
   bottom: auto;
   color: black;
   content: normal;
